--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 alembic==1.2.0
+astroid==2.4.2
 blinker==1.4
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
+colorama==0.4.3
 dominate==2.4.0
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
@@ -15,19 +17,26 @@ Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 gunicorn==19.9.0
 idna==2.8
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy-object-proxy==1.4.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+mccabe==0.6.1
 Pillow==6.1.0
 psycopg2==2.8.3
+pylint==2.5.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.8
+toml==0.10.1
+typed-ast==1.4.1
 urllib3==1.25.5
 visitor==0.1.3
 Werkzeug==0.16.0
+wrapt==1.12.1
 WTForms==2.2.1
